RTL fixes to some files

--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0002.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0002.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <div class="calibre1">
     <img alt="bismi" src="../Images/bismi.png" /><br />
   </div>
