--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0003.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0003.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_2">ޤައުމީ ޚިދުމަތުގައި</h1>
 
   <p class="center1"></p>
