--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0009.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0009.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_8"></h1>
 
   <p class="right1">އުމުރުން އަށްއަހަރުގެ ކުޑަކުއްޖެއްގެގޮތުގައި 1947 ވަނައަހަރު، ދިވެހިސަރުކާރުގެ ކަނޑުދަތުރުކުރާ އުޅަނދެއް ކަމުގައިވާ "ފަތްޙުލް ބާރީ"ގައި ސިލޯނުގެވެރިރަށް ކޮޅުނބަށްދިއުމަށްޓަކައި އަޅުގަނޑު ދިވެހިރާއްޖެއިން ފުރިއިރު، ކުރިންދެންނެވި ކަންތައްތައްއޮތީ، މުސްތަޤްބަލްގައި ހިނގަންހުރި ކަންތައްތަކުގެތެރޭގައެވެ.</p>
