--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0013.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0013.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_12"></h1>
 
   <p class="right1">ކޮޅުނބުތެރެއަށް މިއަދުދޫކޮށްލެވޭ ފިރިހެންކުއްޖަކު، "އިސްކޮޅުނުކައިގެން އުޅުމުގެނުރައްކާ"، 1956 ވަނަ އަހަރުގެ ކުރިއަށްވުރެ އަދި މާބޮޑުވާނެއެވެ. އަޅުގަނޑުގެ ގެއާއި، ބައްޕައާއިދުރުގައި ހުރިކަމުގައި ވިއަސް، ބައްޕަގެ ނުފޫޒް ހުރިހާ ދިމާއަކުން އަޅުގަނޑަށްފޯރައެވެ. އަޅުގަނޑާގުޅާނެ ފޯނުނެތްކަމުގައިވީނަމަވެސް، ބައްޕައަށް އަޅުގަނޑާބެހޭ ހުރިހާޚަބަރެއް ލިބިލައްވާނެކަން އަޅުގަނޑަށްއެނގެއެވެ. އެޖަމާއަތަކީ ވަރަށްގާތްކޮށްއުޅޭ ޖަމާއަތެކެވެ. ކަމެއްޖެހިއްޖެ ހިނދެއްގައި އެކަކުއަނެކަކަށް އެހީތެރިވެދޭބައެކެވެ.</p>
