--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0017.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0017.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_16"></h1>
 
   <p class="right1">މިކަންކަން އަޅުގަނޑަށްސާފުވީ، އެމް.އެން.ޓީ.ސީ.ގައި މަސައްކަތްދަސްކުރަން އުޅުމުގެތެރޭގައެވެ. 78 ރެކްލެމޭޝަން ރޯޑް، ކޮޅުނބުގެ މަތީބުރީގައިހުރި އެމް.އެން.ޓީ.ސީ.ގެ މައިއޮފީހަށް ވަނުމުން، ކުންފުނީގެ މެނޭޖިންގ ޑިރެކްޓަރ މިސްޓަރ ޕީ.އެމް.ނަޔަރ އޭނާގެ މޭޒާ ޖެހިގެންހުރި މޭޒުދޮށުގައި އިށީނުމަށް ބުނުއްވިއެވެ. ބައްޕަ އަޅުގަނޑަށް މާކުރީގައި ދެއްވާފައިވާ ނަޞޭޙަތް އެވަޤުތު އަޅުގަނޑުހަދާންވިއެވެ.</p>
