--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0021.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0021.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_20"></h1>
 
   <p class="right1">އަޅުގަނޑު ކުރިންދަންނަވާފައިވާ ސިޔާސީހަލަބޮލިކަން ރާއްޖެއަށްއައީ، އެއްވެސްފަރާތަކާއި މަޝްވާރާކުރެއްވުމަކާއިނުލައި އިބްރާހީމް ޢަލީ ދީދީ އަމިއްލަފުޅަށް އައްޑުއަތޮޅު ގަން އިނގިރޭސިސަރުކާރަށް ކުއްޔަށްދެއްވުމަށް ނިންމެވުމާގުޅިގެންނެވެ. މިއީ ރައްޔިތުންގެމަޖްލިސުންނާއި ވަޒީރުންގެމަޖްލިސުން އެންމެހާމެންބަރުން އިޢުތިރާޒު ކުރެއްވިކަމެކެވެ. ނަތީޖާއެއްގެގޮތުން، އިބްރާހީމް ޢަލީ ދީދީއަށް މަޖްބޫރުވެވަޑައިގަތީ އިސްތިޢުފާދެއްވާށެވެ.</p>
