--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0024.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0024.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_23"></h1>
 
   <p class="right1">ތިޔާގިކަމުގެ ދިހައަހަރު ކަމުގައިވީ 1960ގެ އަހަރުތަކަށް އަލިވިލުނީ، ދެކުނުގެއަތޮޅުތަކުގައި ބަޣާވަތެއްފެށި އަދި ރާއްޖޭގެ ހުރިހާރަށެއްގައިހެން ހަމަނުޖެހުމުގެ މޫސުމެއް އުފެދުމުންނެވެ. އިނގިރޭސިވިލާތުގައި ދެވަނަބޮޑުހަނގުރާމަ ނިމުމާގުޅިގެންއައި ދަތިދުވަސްވަރުފާއިތުވެ، ވަރަށްއުފާވެރިކަމާއިއެކު 1950ގެ ކާރުބާރުބޮޑު ލަންޑަނެއް އުފަންވިއެވެ. އެމެރިކާގައި މިދިހައަހަރު ވެގެންދިޔައީ ވަރަށްލޭއޮހޮރުވުންގިނަ އަހަރުތަކަކަށެވެ. ދޮނާއި ކަޅުމީހުންގެ ދެކޮޅުވެރިކަމުގެ މުޒާހަރާތަކާއި، ރައީސް ކެނެޑީ އާއި، މާރޓިން ލޫތަރ ކިންގ، އަދި ރޮބަރޓް ކެނެޑީވެސް އަވަހާރަކޮށްލުން ހިނގައިދިޔައެވެ.</p>
