--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0027.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0027.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_26"></h1>
 
   <p class="right1">ދެކުނުގެބަޣާވާތް ހިނގަމުންދިޔައިރު އަޅުގަނޑުއުޅުނީ އެމް.އެން.ޓީ.ސީ.ގެ ބޯޓުފަހަރުގެކަންތައް ކުރިއެރުވުމުގެ ކަންތަކުގައި އަވަދިނެތި ކޮޅުނބުގައެވެ.</p>
