--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0031.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0031.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_30"></h1>
 
   <p class="right1">ނާޞިރުގެ ވަޒީރުލްއަޢުޒަމްކަމުގެ ކުރީކޮޅުގައި، އަޅުގަނޑާއި ދެކަމެއް ޙަވާލުކުރެއްވިއެވެ. އެދެކަމުގެވާހަކަ މިތާނގައި ލިޔުނުކަމުގައި ވީނަމަވެސް، އަޅުގަނޑު އެތާރީޚްތަކެއް ހަނދާނެއްނެތެވެ. ނާޞިރު އަމިއްލައަތްޕުޅުން ކަންތައްތައް ކުރެއްވުމުގައި ތަފްޞީލަށް ބައްލަވާވަރާއި، ދިވެހިންގެޙާލަތު ރަނގަޅުކުރެއްވުމަށް އާޚިޔާލުތައް ބޭނުންކުރައްވައިގެން ކަންތައްތައް ކުރެއްވުމަށް ބެހެއްޓެވި ޝައުޤުވެރިކަން މިކަމުންދޭހަވާނެއެވެ.</p>
