--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0035.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0035.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_34"></h1>
 
   <p class="right1">ރަސްމީގޮތުން އަޅުގަނޑު ސްރީލަންކާގައި ހުރިކަމުގައިވީނަމަވެސް، 1964 ވަނައަހަރު ވަޒީރުލްއަޢުޒަމް ނާޞިރު، އަޅުގަނޑު މާލެއަށްއައުމަށް އެންގެވިއެވެ. ދިވެހިރާއްޖޭގެ ތަރައްޤީއާއި މުއްސަނދިކަން އިތުރުވުމުގެ އެންމެމުހިންމު ވަޞީލަތެއްކަމުގައި މެދުވެރިވި އެއަރޕޯރޓްހެދުމުގެ މަސައްކަތްހިންގުމުގެކަންތަކާއި ޙަވާލުވުމަށްޓަކައެވެ.</p>
