--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0038.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0038.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_37"></h1>
 
   <p class="right1">އެއަރޕޯރޓްގެމަސައްކަތް ހިނގަމުންދަނިކޮށް، ބިޓުމިން/ތާރު ހިފައިގެންއައި ބޯޓެއްކަމުގައިވާ "ސިޓީ އޮފް ވިކްޓޯރިޔާ" ފަރަށްއަރައިފިއެވެ. މިބޯޓުފުންކުރީ ދިވެހީންނެވެ. ބޯޓު މަރާމާތުކުރުމުގެ އަގެއްގެގޮތުގައި އިނގިރޭސި ސަރުކާރުން 40،000 ޕައުންޑްދިނެވެ. ބުންބާގެ މަޒޯގޮއަންގެ ޑޮކްގައި މަރާމާތުކުރުމަށްފަހު، އެބޯޓަށް "ދިއްފުށިމާދޫ" ގެނަމުން ނަންދެވުނެވެ. އެއީ މިބޯޓު އުރުނު ފަރުގެނަމެވެ.</p>
