--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0042.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0042.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_41"></h1>
 
   <p class="right1">އަޅުގަނޑު އެމް.އެސް.އެލް.ގެހިންގުމާއި، އަދި ފައިސާހޯދުމުގެކަންތައްތައް ހަމަޖެއްސުމުގައި، ހުރިހާކަމެއްކުރަމުން ގެންދިޔައިރު، އަޅުގަނޑުމެންގެ ބޯޓުފަހަރުގެ ޞިނާޢަތު ކުރިއެރުވުމުގެ އެންމެމުހިންމު ސަބަބަކަށްވީ، މިބޯޓުފަހަރުގައި މަސައްކަތްކުރި ދިވެހިފަޅުވެރިންނެވެ. ދިވެހީން ދިރިއުޅެނީ ކަނޑާއިއެކުގައިކަމަށްވެފައި، އެމީހުން އުފަންވަނީވެސް ކަނޑުމަތީގައިއުޅޭ މީހުންގެގޮތުގައެވެ.</p>
