--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0046.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0046.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_45"></h1>
 
   <p class="right1">27 ނޮވެމްބަރ 1967އިން ފެށިގެން 6 އެޕްރީލް 1975އަށް އަޅުގަނޑަކީ ރަސްމީގޮތުން މިނިސްޓްރީ އޮފް ފޮރިން އެފެއަރޒްގެދަށުން ސިލޯނުގައިހުންނަ ވިޔަފާރިއާބެހޭ ރެޕްރެޒެންޓޭޓިވްއެވެ. މިދުވަސްވަރަކީ އެތައްމަސްއަލަތަކެއްގެތެރޭގައި އުޅެންދިމާވެފައިއޮތް ދުވަސްވަރެކެވެ. އެއީ އަޅުގަނޑުމެންގެ މިކުދިރަށްތައް ތަރައްޤީކުރުމުގެ މަސައްކަތްކުރަމުން ދިޔައިރު، ސްރީލަންކާގައި އޮތީ ސިޔާސީ ހުރަސްއެޅުންތައް ގިނަގުނަވެފައެވެ.</p>
