--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0049.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0049.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_48"></h1>
 
   <p class="right1">1970 ވަނައަހަރު ކޮޅުނބުގެ މަސްރަޙް މާރަނގަޅެއްނޫނެވެ. އެކަމުގެހެއްކަކީ ސްރީލަންކާގެސަރުކާރުގެ ފަރާތުން ގެންނަމުން ގެންދިޔަ ސޯޝަލިސްޓް ސިޔާސަތުތަކެވެ. މީގެސަބަބުން އަސަރުކުރީ ހަމައެކަނި ސްރީލަންކާގެ މީހުނަކަށްނޫނެވެ. ދިވެހީންނަށްވެސް އަސަރުކުރަމުންދިޔައެވެ. ("ސްރީލަންކާ" މިއީ 1972 ގެފަހުން ސިލޯނަށް ކިޔާނަމެވެ.) ދިވެހިސަރުކާރުގެ ފަރާތުން، އެމް.އެސް.އެލް.ގެ ކަންތައްތައްހިންގަވާޤައުމު ބަދަލުކުރެއްވުމާއި، އަދި ވިޔަފާރީގެޙަރަކާތްތައް ހިންގަވާނެތަނަކާމެދު ވިސްނާވަޑައިގަންނަވަން ފަށްޓަވައިފިއެވެ.</p>
