--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0052.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0052.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <p class="right1"> </p>
 
   <p class="right">ދިވެހިރާއްޖޭގެ އުދަރެސް ރާއްޖެއިންބޭރުގައި ފުޅާކުރުމުގެ މަސައްކަތް އަޅުގަނޑު ކުރަމުންގެންދިޔައިރު، މާލޭގައި ދިރިއުޅުމުގެ ކަންތައްތައްދިޔައީ ދަތިވަމުންނެވެ. ދުނިޔޭގެބާޒާރުގައި ތަކެތީގެއަގުބޮޑުވަމުންދިޔުމުގެ ނަތީޖާއަކީ، ޢާއްމު ދިވެހިރައްޔިތަކަށް ހަނޑޫ، ހަކުރުފަދަ ބަނޑުފުރާނަ މުއްތިކުރާނެތަކެތިދިޔައީ އަގުބޮޑުވަމުންނެވެ. (އެއީ އެދުވަސްވަރުގެ ތެލުގެއަގަށް އަންނަމުންދިޔަ ބަދަލުތަކާއި ގުޅިގެންނެވެ.)</p>
