--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0056.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0056.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_55"></h1>
 
   <p class="right1">ރާއްޖޭގެ މުވާޞަލާތީކަންތައްތަކުގައި އަޅުގަނޑުގެބައިވެރިވުން ފެށިފައިވަނީ 1974 ވަނައަހަރުގެ އިންޑިޔާގެ އޯވަރސީޒް ކޮމިޔުނިކޭޝަން ސަރވިސް (އޯ.ސީ.އެސް.) އާއި މަޝްވަރާކުރުމަށް ދިވެހިސަރުކާރުގެފަރާތުން ފޮނުއްވި ވަފްދުގެވެރިޔާގެ ޙައިސިއްޔަތުންނެވެ. އޯ.ސީ.އެސް. އާއި ދިވެހިރާއްޖޭގެ ޓެލެކޮމިއުނިކޭޝަންސް ޑިޕާރޓްމަންޓް (ޓީ.ސީ.ޑީ.) އާއިދެމެދު ޓެލެޕްރިންޓަރލިންކެއް ޤާއިމްކޮށް، އަދި މިގުޅުމުގެ ސަބަބުން ފުރަތަމަފަހަރަށް ދިވެހިރާއްޖެއާއި ދުނިޔޭގެ ޤައުމުތަކާއިދެމެދު ޓެލެކްސްގެ ޒަރީޢާއިން ގުޅުންއުފެދުނެވެ. މީގެކުރިން ގުޅިފައިވަނީ ހަމައެކަނި ކޮޅުނބުގައިހުންނަ ދިވެހިސަފީރު އޮފީހާއި ޓީ.ސީ.ޑީ. އާއެވެ. އެއީ މިދެތާނގައި ބެހެއްޓިފައިވާ ކޮލިންސް ޓްރާންސީވަރ މެދުވެރިކޮށެވެ. މިގުޅުން ބޭނުންކުރަނީ ހަމައެކަނި ދިވެހިސަރުކާރުންނެވެ. ދިވެހިސަރުކާރުގެފަރާތުން ކޮޅުނބުގައި ހުންނަ ދިވެހިރާއްޖެއަށް ކަނޑައަޅާފައިވާ ބޭރުގެ ސަފީރުއޮފީސްތަކަށް ފޮނުއްވާ މެސެޖްތަކާއި އަދި ދިވެހިރާއްޖޭގެ ފަރާތުން ކޮޅުނބުގައި ހުންނަ ޓްރޭޑް އޮފީހަށް ފޮނުއްވާ މެސެޖްތައް ޓީ.ސީ.ޑީ.ގެ އޮޕަރޭޓަރުން ކިޔައިދެނީ، ނުވަތަ މޯރސްކޯޑް ބޭނުންކޮށްގެންފޮނުވަނީއެވެ. ސަފީރުއޮފީހުގެ އޮޕަރޭޓަރުން ލިޔެ، ގެންދަންވީތަންތަނުގެ އެޑްރެސްޖެހުމަށްފަހު މެސެންޖަރުން މެދުވެރިކޮށް އެތަނަކަށް ފޮނުވަނީއެވެ. އެތަންތަނުންނާއި ދިވެހިޓްރޭޑް އޮފީހުން ދިވެހިސަރުކާރަށް ފޮނުވާ މެސެޖްވެސް ފޮނުވަނީ ހަމަމިބީދައިންނެވެ.</p>
