--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0064.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0064.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_63"></h1>
 
   <p class="right1">އެންމެފުރަތަމަ އަޅުގަނޑު ކުރަންޖެހުނު އެއްކަމަކީ، ހުޅުލޭގައި އަލަށްހަދާފައިވާ ވައިގެބަނދަރާ ގުޅިފައިވާކަމެކެވެ. މިއީ އަޅުގަނޑު އެތަނުގެ ބިންހިއްކުމުގެ މަޝްރޫޢު ރޭވުމުގެމަސައްކަތުގައި ބައިވެރިވީކަމެކެވެ. މައުމޫނުވިދާޅުވީ މަސައްކަތް ޙަވާލުކުރެވިފައިވާ ކޮންޓްރެކްޓަރާއި މަސައްކަތުގެ ލަފާދޭ ކޮންސަލްޓަންޓްއާއި ދެމެދު، އިންޑިޔާމީހުން މަސައްކަތް ނިންމާފައިވާ ޕާކިންގ ސަރަޙައްދާގުޅިގެން ދެބަސްވުންތަކެއް އުފެދިގެންއުޅޭކަމަށެވެ. އަދި މިކަން އޮޅުންފިލުވައިދީ، ޙައްލެއްހޯދުމަށެވެ.</p>
