--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0068.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0068.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_67"></h1>
 
   <p class="right1">މައުމޫނު ރައީސްކަމުގެމަޤާމަށް ޢައްޔަނުކުރެވުނުތާ ސޯޅަމަސްދުވަސްފަހުން، ސްރީލަންކާގެ ރައްޓެއްސެއް ވަރަށްއާދަޔާއިޚިލާފް ޚަބަރެއް އަޅުގަނޑަށްދިނުމަށްޓަކައި ފޯނުކުރިއެވެ. އެއީދިވެހިރާއްޖެއަށް އިޓަލީ ސަރުކާރުން ކަނޑައަޅުއްވާފައި ކޮޅުނބުގައިހުންނަވާ ސަފީރުގެ އަނބިކަނބަލުން، ޗުއްޓީއެއްހޭދަކުރައްވަން ކުރުނބާގައި ހުންނަވަނިކޮށް، އެރަށުގައި އުޅެމުންގެންދިޔަ ވަރަށްވަރުގަދަކޮށްތިބި ނުވައިނގިރޭސީންނާއިމެދު އެކަމަނާގެ ހިތްޕުޅުގައި ޝައްކުއުފެދިގެންނެވެ. އެމީހުންނަކީ ފީނުމަށްޓަކައި ރާއްޖޭގައި ޗުއްޓީއެއް ހޭދަކުރުމަށް އައިސްއުޅޭބައެއްކަމުގައި ބުނިނަމަވެސް، ފެނުގެއަޑިއަށްވުރެ ގިނަވަގުތު އެމީހުންހޭދަކުރަނީ ވަރަށްގިނަ މަޝްވަރާތަކެއް ކުރުމުގައި ފެންނޯންނަހިސާބުގައި ގޮނޑުދޮށުގައެވެ.</p>
