--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0072.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0072.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_71"></h1>
 
   <p class="right1">މައުމޫނުގެ ސަރުކާރުގެހިންގުން ފެށުމާއިއެކު، ޢަރަބިދުނިޔެއާއި ދިވެހިރާއްޖެއާއި ދެމެދު ގުޅުންބަދަހިވާން ފެށިއެވެ. ދިވެހިސަރުކާރުގެ ވެރީން ޢަރަބީން ދެނެވަޑައިގެން، އަދި ފަރިތަކޮށް އަރަބިބަހުން ވާހަކަފުޅުދައްކަވައެވެ. ޕެލެސްޓައިން ލިބަރޭޝަން އޯރގަނައިޒޭޝަން (ޕީ.އެލް.އޯ.) ގެ ފަރާތުން ދިވެހިރާއްޖޭގައި އެމްބެސީއެއް ހުޅުވުމަށް ވަރަށްޙަރަކާތްތެރިވަމުންދިޔައެވެ. ޕީ.އެލް.އޯ.އާއިއެކު ހިންގުމަށް ހަމަޖެހެމުންދިޔަ މަޝްރޫއުތަކުގައި އަޅުގަނޑުގެ ސީދާބައިވެރިވުން ނެތްކަމުގައިވީ ނަމަވެސް، މިމަޝްވަރާކުރަމުން ގެންދިޔަ ލިސްޓްގެ އެންމެ ކުރީގައިވަނީ ދެޤައުމު ގުޅިގެން ހިންގުމަށް ހަމަޖެހެމުންދިޔަ އެއަރލައިނެއްކަން އަޅުގަނޑަށް އެނގިފައިވެއެވެ.</p>
