--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0076.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0076.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_75"></h1>
 
   <p class="right1">1978 ވަނައަހަރު މައުމޫން ވެރިކަމަށް ވަޑައިގަތުމާއިގުޅިގެން، ޓުއަރިޒަމްގެ ޞިނާޢަތާއިމެދު އާވިސްނުމެއް ގެންގުޅުއްވަން ފެށްޓެވިއެވެ. އެއީ އެކަން ކުރިއަރުވަންވީތޯ ނުވަތަ ބައެއް ރަށްރަށަށް ކުރަމުންދާ ނޭދެވޭއަސަރުގެ ސަބަބުން މަނާކުރަންވީ ތޯއެވެ؟ އެގޮތަކީ ކުރީކޮޅުގައި ބައެއްރަށްރަށުގެ ގޮނޑުދޮށުގައި ހެދުންނުލާއުޅުމުގެ ހުއްދަދީފައިއޮތެވެ. ބައެއް ރަށްރަށުގައި ތިބޭޓުއަރިސްޓުން، ދިވެހިންގެ ދީނީއާދަކާދަތަކާއި ނުބައްދަލު ޢަމަލުތައް ހިންގަމުންދެއެވެ. އަދި ރާއްޖެއަށްއަންނަ ބިދޭސީންގެ ޕާސްޕޯރޓެއްވެސް ބޭނުމެއްނުވެއެވެ.</p>
