--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0084.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0084.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_83"></h1>
 
   <p class="right1">ސީ.އެންޑް ޑަބްލިޔުގެ ފަރާތުން އެޖަލްސާގައި، ދެފަރާތްގުޅިގެން ހަދަން ހުށަހަޅާފައިވާ ޖޮއިންޓް ވެންޗަރ ކުންފުނި، "ދިރާގު" ހެދުމުގައި އެމީހުން ކަންތައްކުރަން ޤަޞްދުކޮށްފައިވަނީ، އެހެން ޖަޒީރާ ޤައުމުތަކުގައިވެސް އެމީހުން ގެންގުޅުނުފަދަ، ލަސްލަހުން ވިސްނައިގެން ކުރިއަށްދިއުމުގެ އުސޫލުންނެވެ. އަބަދުވެސް ސީ.އެންޑް ޑަބްލިޔު.ގެ ޑިރެކްޓަރުން ގެންގުޅެނީ ވަރަށްކޮންސަރވެޓިވްގޮތެކެވެ. އެމީހުންގެވާހަކަ ނުވަތަ ޒުވާބަކީ ދިވެހިރާއްޖޭގައި އިތުރު ޚިދްމަތްތަކެއް ތަޢާރަފްކުރުމަށް ފުދޭވަރެއްގެ އާބަދީއެއްނެތް (ކްރިޓިކަލް މާސް ނުވަތަ މާރުކޭޓުގެ ސައިޒް ކުޑަ) ކަމަށެވެ.</p>
