--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0088.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0088.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_87"></h1>
 
   <p class="right1">1986 ވަނައަހަރު އަނެއްކާވެސް މާލޭގައި ބަނދަރެއްހެދުމުގެ މަސައްކަތުގައި އަޅުގަނޑު އުޅެންޖެހިއްޖެއެވެ. މިފަހަރުއެއީ މާލޭގެ ވިޔަފާރިބަނދަރުގެ މަސައްކަތެވެ. މިހާހިސާބުން މިކަމުގައި ދިމާވި ދަތިތަކާއި މަސްއަލަތަކުގެ ވާހަކަލިޔުމުގެބަދަލުގައި، ރައީސް މައުމޫން އަޅުގަނޑަށްފޮނުއްވި އަޅުގަނޑު ވަރަށްއުފާވެ ފަޚުރުވެރިވާ،ސިޓީފުޅު ނަކަލުކޮށްލުން މާއައުލާކަންބޮޑުކަމުގައި އަޅުގަނޑަށްފެނެއެވެ.</p>
