--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0096.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0096.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_95"></h1>
 
   <p class="right1">1988 ހާތާގައި، މުދާއުފުލުމުގެ އަގުތައް މަތިވުމާއި، ރަނގަޅުއަގެއްގައި ތަކެތި ވިކެންފެށުމަކީ، މޯލްޑިވްސް ޝިޕިންގ ލިމިޓަޑް (އެމް.އެސް.އެލް.) އަށް އެހީތެރިވެދިން ކަމެއްކަމުގައިވީނަމަވެސް، 1990 ގެއަހަރުތަކުގެ ކުރީކޮޅު، މާލެއިން މުދާއުފުލުމަކީ އެމް.އެސް.އެލް.ހިންގުމުގެޚަރަދުލިބުމަށް ދަތިކަމަކަށްވަނީވެފައެވެ. މިކަން މެދުވެރިވުމުގެ އެންމެބޮޑު އެއްސަބަބަކީ ބަނދަރުގައި މުދާބޭލުމުގައި ލަސްވުމެވެ. އަދި މިކަންވަނީ 1990 ގެއަހަރުތަކުގެތެރޭގައި އިތުރުވެފައެވެ.</p>
