--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0100.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0100.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_99"></h1>
 
   <p class="right1">އަޅުގަނޑަށް ދެވަނަޕެންޝަންލިބުނީ ޖުލައި 1998 ގައެވެ. އެދުވަހަކީ އަޅުގަނޑު ދިވެހިސަރުކާރަށް ޚިދުމަތްކުރާތާ 40 އަހަރުވީދުވަހެވެ. މިބަސްތައް އަޅުގަނޑު ލިޔަމުންދާއިރު، އަޅުގަނޑަކީ މީގެ 50 އަހަރުކުރިން، ކޮޅުނބުގައިހުންނަ ދިވެހިސަފީރު އޮފީހުގައި މަސައްކަތްކުރަންއުޅުނު ފަނަރައަހަރުގެ ކުއްޖެއްކަން ޤަބޫލުކުރުމަކީ ދަތިކަމެކެވެ.</p>
