--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0104.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0104.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_103"></h1>
 
   <p class="right1">ވައިގެތެރޭގައި އަޅުގަނޑުމެންނަށް މަސްއަލަތަކާއި ކުރިމަތިވެ، އެކަންކަންޙައްލުކުރުމަށް އަޅުގަނޑަށްޖެހުނެވެ. ދިވެހިރާއްޖޭގެ މައިގަނޑު ޞިނާޢަތުކަމުގައިވާ ޓުއަރިޒަމް ދެމެހެއްޓުމަށްޓަކައި، ވައިގެމަގުން ދަތުރުކުރުމުގެ ދާއިރާގައި ދިވެހިރާއްޖޭގައި އެހާރަނގަޅު ރެކޯޑެއްނެތެވެ. މިއަދުވެސް އަޅުގަނޑުމެންގެ އެއަރލައިންއެއްނެތްކަމީ ވަރަށްހައިރާންވާކަމެކެވެ.</p>
