--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0108.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0108.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_107"></h1>
 
   <p class="right1">އަނެއްކާވެސް އަޅުގަނޑަށްކުރަންޖެހުނީ އެއަރލައިންއަކާބެހޭކަމެކެވެ. މިކަމަކީ އެމިރޭޓްސް އެއަރލައިންސްއާއި ސްރީލަންކަން އެއަރލައިންސްއާއި ގުޅޭކަމެކެވެ. (މިއީ އެމިރޭޓްސްއާ ގުޅުނުފަހުން އެއަރލަންކާއަށްދީފައިވާ އާނަމެވެ.) މިވާހަކަ މިލިޔަނީ ޓުއަރިޒަމްގެ ޞިނާޢަތަށް ކޮމަރޝަލްގޮތުން ޝައުޤުވެރިކަންއޮވެދާނެ ކަމަކަށްވާތީއެވެ.</p>
