--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0111.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0111.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_109">މާލޭ ފެންކުންފުނި</h1>
 
   <p class="right1">1980 ގެއަހަރުތަކުގެތެރޭގައި ވެރިރަށުގައި ސަރުކާރުން ހިންގެވުމަށް ހަމަޖައްސަވާފައިވާ އެތައްމަޝްރޫޢުތަކެއްގައި އެހީތެރިވުމަށް އަޅުގަނޑުގެގާތުން އެދެވުނެވެ. ދިވެހިރާއްޖެއަށް އަންނަން ފަށާފައިވާ ތަރައްޤީއާއި މުއްސަނދިކަމުގެސަބަބުން، މާލޭގެ ޢުމްރާނިއްޔަތަށް ތަފާތުބަދަލުތަކެއްވަނީ ގެންނަންޖެހިފައެވެ. ޢިމާރާތްކުރުމަށް ގިނަބިންތަކެއްވަނީ ބޭނުންކުރަންފަށާފައެވެ. ނަތީޖާއަކީ މާލޭގެ މާޙައުލްގެ ފެހިކުލަވަރު ގެއްލެންފެށުމެވެ. 1940 ގެއަހަރުތަކުގެތެރޭގައި، މާލޭގެ ފެހިކަމުގެ ނިޝާނެއްކަމުގައިވާ އަނބުގަސްތައްވަނީ ކަނޑާލާފައެވެ. ނުވަތަ، ބިމުގެ ފެންފަށަލަ ލޮނުވުމުގެސަބަބުން މަރުވާންފަށާފައެވެ.</p>
