--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0114.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0114.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_112">އެޕިލޮގް</h1>
 
   <p class="right1">އަޅުގަނޑަށްވިސްނޭގޮތުގައި، މިހާރު ތާރީޚުގެތެރޭގައިވާ "އަޅުގަނޑުގެ ދުވަހުފޮތް" ލިޔުމުގައި އަޅުގަނޑަށް ކުރެވެންއޮތް އެންމެރަނގަޅަކަށް މަސައްކަތްކޮށްފީމެވެ. ދިވެހިރާއްޖެ ވަރަށްސާދާ، ބޯދާ ރަށްތަކެއްގެގޮތުގައިއޮވެ، ތަރައްޤީވެގެންދިޔަގޮތާއިމެދު އެހެންބޭފުޅުން ދެކެވަޑައިގަންނަވާގޮތް ތަފާތުވެދާނެއެވެ.</p>
