--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0118.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0118.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_117"></h1>
 
   <p class="right1">އަޅުގަނޑު ދިވެހިސަރުކާރަށް ޚިދުމަތްކުރުމުގައިހޭދަކުރި މިގިނައަހަރުތަކުގެތެރޭގައި ދިވެހިރާއްޖެއަށް ވަރަށްގިނަބަދަލުތައް އައިސްފައިވާކަން އަޅުގަނޑަށްދޭހަވެއެވެ. މިބަދަލުތައް އައުމަށްދިމާވި ގިނަސަބަބުތައް ވިސްނުނުކަމުގައިވީނަމަވެސް، ހުރިހާ ސަބަބެއްނޭނގެއެވެ. އަލަށްއުފަންވި ޖީލުތަކާއި އަޅުގަނޑުމެންގެޖީލުގެ މީހުންގެވިސްނުން ތަފާތުކަން، އަޅުގަނޑަށް އިޙްސާސްކުރެވެއެވެ.</p>
