--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/toc.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/toc.xhtml
@@ -11,7 +11,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <section class="frontmatter TableOfContents" epub:type="frontmatter toc">
     <header>
 
