--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0029.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0029.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_28">8 ވަނަ ބާބު</h1>
 
   <p class="center1" id="heading_id_29">މުވާޞަލާތު، 1962އިން 1964އަށް</p>
