--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0060.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0060.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_59"></h1>
 
   <p class="right1">މިދުވަސްވަރުގެތެރޭގައި ދިވެހިޖައްވަށް ވެރިވެފައިވާ ނުތަނަވަސްކަމުގެވާހަކަ ކުރިން ކޮންމެވެސްވަރަކަށް ދަންނަވައިފީމެވެ. ނާޞިރު، އަޙްމަދު ޒަކީ މަޤާމުން ދުރުކުރައްވައި ރާއްޖެތެރޭގެރަށަކަށް ފޮނުވާލެއްވިއެވެ. އެމަނިކުފާނު މިނިވަންވީ މައުމޫން ޢަބްދުލް ޤައްޔޫމް ރައީސްކަމުގެ މަޤާމަށް އިސްވެވަޑައިގަތުމާއި ގުޅިގެންނެވެ. އެއަށްފަހު، އެމަނިކުފާނު އ.ދ.ގައިހުންނަވާ ދިވެހިރާއްޖޭގެ ދާއިމީވަކީލުކަމަށް ޢައްޔަންކުރެވުނެވެ.</p>
