--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0080.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0080.xhtml
@@ -9,7 +9,7 @@
   <link href="../Styles/page_styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="calibre">
+<body dir="rtl" class="calibre">
   <h1 class="center" id="heading_id_79"></h1>
 
   <p class="right1">ރައީސް ނާޞިރުގެއަރިހުގައި މަސައްކަތް ކުރަމުންގެންދިޔަ ދިގުމުއްދަތުގެތެރޭގައި، އަޅުގަނޑަށް ދަސްވެފައިވަނީ ޖެހިދާނެ ކޮންމެކަމަކަށްވެސް ތައްޔާރީޙާލަތެއްގައިހުރުމަށެވެ. ޗެލެންޖަކަށްވާފަދަ އާކަމަކައިގެން އެމަނިކުފާނު ގުޅުއްވާނެވަޤުތެއް އަޅުގަނޑަށް އެއްގޮތަކަށްވެސް ނޭނގެއެވެ. އެދެބޭފުޅުންނަކީ ޠަބަޢީ ގޮތުންނާއި ކަންކަން ކުރެއްވުމުގައި ވަރަށްތަފާތު ދެބޭފުޅުން ކަމުގައިވީނަމަވެސް، ސިޔާސީކަންކަމާއި ޚިލާފަށް، ވިޔަފާރީގެ ނުވަތަ ކޮމަރޝަލްކަމެއް ދިމާވެއްޖެނަމަ، ރައީސް މައުމޫނުވެސް އެކަމެއް ޙައްލުކުރެއްވުމަށް އަޅުގަނޑާ ގުޅުއްވައެވެ.</p>
