Readme update & cleaned html files

--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0096.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/content0096.xhtml
@@ -1,8 +1,5 @@
-<?xml version="1.0" encoding="utf-8" standalone="no"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<?xml version="1.0" encoding="UTF-8"?>
+<html xml:lang="dv" xmlns="http://www.w3.org/1999/xhtml">
 <head dir="rtl">
   <title>Unknown</title>
   <link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css" />
@@ -88,183 +85,75 @@
 
   <p class="right1">އެމް.އެސް.އެލް.އާ ކުރިމަތިވެފައިވާދަތި ނުވަތަ ނުބައިދުވަސްވަރުގެ މިސާލެއްގެގޮތުން 1994 ވަނައަހަރުގެ މާލެއަށް މުދާބޭލުމުގެ ހިސާބުތައް ބައްލަވާލައްވާށެވެ.</p>
 
-  <table class="calibre7">
-    <tr class="calibre8">
-      <td class="calibre9">
-        <p class="right1">ދިވެހިރާއްޖޭގެ ލޯޑު ޕޯރޓުގައި ހޭދަވި އިތުރު ދުވަސް</p>
-      </td>
+<p class="right1"> </p>
 
-      <td class="calibre9">
-        <p class="right1" >ލޯޑުޕޯރޓުގައި ޑިސްޗާރޖް ކުރުމުގައި ލަސްވި ވަރު</p>
-      </td>
+<table border="1" class="calibre7">
+<tr class="calibre8">
+<td class="calibre9"><p class="right1"><strong class="calibre3"></strong></p>  </td>
+  <td class="calibre9"><p class="caption">ދިވެހިރާއްޖޭގެ ލޯޑު ޕޯރޓުގައި ހޭދަވި އިތުރު ދުވަސް</p>  </td>
+  <td class="calibre9"><p class="caption">ލޯޑުޕޯރޓުގައި ޑިސްޗާރޖް ކުރުމުގައި ލަސްވި ވަރު</p>  </td>
+  <td class="calibre9"><p class="caption">ދިވެހިރާއްޖޭ ގައި ލޯޑުކުރުމުގައި ލަސްވި ވަރު</p>  </td>
+  <td class="calibre9"><p class="caption">ދަތުރުކުރި އަދަދު</p>  </td>
+  
+</tr>
+<tr class="calibre8">
+<td class="calibre9"><p class="caption">އުއްމީދު</p>  </td>
+  <td class="calibre9"><p class="caption">33</p>  </td>
+  <td class="calibre9"><p class="caption">60</p>  </td>
+  <td class="calibre9"><p class="caption">2</p>  </td>
+  <td class="calibre9"><p class="caption">6</p>  </td>
+  
+</tr>
+<tr class="calibre8">
+<td class="calibre9"><p class="caption">ޕަޔަނިއަރ ސުޕްރީމް</p>  </td>
+  <td class="calibre9"><p class="caption">29</p>  </td>
+  <td class="calibre9"><p class="caption">73</p>  </td>
+  <td class="calibre9"><p class="caption">44</p>  </td>
+  <td class="calibre9"><p class="caption">9</p>  </td>
+  
+</tr>
+<tr class="calibre8">
+<td class="calibre9"><p class="caption">ޑޮލްފިން</p>  </td>
+  <td class="calibre9"><p class="caption">1</p>  </td>
+  <td class="calibre9"><p class="caption">60</p>  </td>
+  <td class="calibre9"><p class="caption">39</p>  </td>
+  <td class="calibre9"><p class="caption">8</p>  </td>
+  
+</tr>
+<tr class="calibre8">
+<td class="calibre9"><p class="caption">ބްލޫ ޖޭޑް</p>  </td>
+  <td class="calibre9"><p class="caption">60</p>  </td>
+  <td class="calibre9"><p class="caption">85</p>  </td>
+  <td class="calibre9"><p class="caption">25</p>  </td>
+  <td class="calibre9"><p class="caption">7</p>  </td>
+  
+</tr>
+<tr class="calibre8">
+<td class="calibre9"><p class="caption">ޕްރޮގްރެސް ލިބަރޓީ</p>  </td>
+  <td class="calibre9"><p class="caption">40</p>  </td>
+  <td class="calibre9"><p class="caption">104</p>  </td>
+  <td class="calibre9"><p class="caption">64</p>  </td>
+  <td class="calibre9"><p class="caption">6</p>  </td>
+  
+</tr>
+<tr class="calibre8">
+<td class="calibre9"><p class="caption">ޕަޔަރނިއަރ އެލިގަންޓް</p>  </td>
+  <td class="calibre9"><p class="caption">41</p>  </td>
+  <td class="calibre9"><p class="caption">62</p>  </td>
+  <td class="calibre9"><p class="caption">21</p>  </td>
+  <td class="calibre9"><p class="caption">3</p>  </td>
+  
+</tr>
+<tr class="calibre8">
+<td class="calibre9"><p class="caption">ޖުމްލަ</p>  </td>
+  <td class="calibre9"><p class="caption">224</p>  </td>
+  <td class="calibre9"><p class="caption">444</p>  </td>
+  <td class="calibre9"><p class="caption">9220</p>  </td>
+  <td class="calibre9"><p class="caption"> </p>  </td>
+  
+</tr>
+</table>
 
-      <td class="calibre9">
-        <p class="right1">ދިވެހިރާއްޖޭ ގައި ލޯޑުކުރުމުގައި ލަސްވި ވަރު</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">ދަތުރުކުރި އަދަދު</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1"> </p>
-      </td>
-    </tr>
-
-    <tr class="calibre8">
-      <td class="calibre9">
-        <p class="right1">33</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">60</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">2</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">6</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">އުއްމީދު</p>
-      </td>
-    </tr>
-
-    <tr class="calibre8">
-      <td class="calibre9">
-        <p class="right1">29</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">73</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">44</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">9</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">ޕަޔަނިއަރ ސުޕްރީމް</p>
-      </td>
-    </tr>
-
-    <tr class="calibre8">
-      <td class="calibre9">
-        <p class="right1">1</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">60</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">39</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">8</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">ޑޮލްފިން</p>
-      </td>
-    </tr>
-
-    <tr class="calibre8">
-      <td class="calibre9">
-        <p class="right1">60</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">85</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">25</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">7</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">ބްލޫ ޖޭޑް</p>
-      </td>
-    </tr>
-
-    <tr class="calibre8">
-      <td class="calibre9">
-        <p class="right1">40</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">104</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">64</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">6</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">ޕްރޮގްރެސް ލިބަރޓީ</p>
-      </td>
-    </tr>
-
-    <tr class="calibre8">
-      <td class="calibre9">
-        <p class="right1">41</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">62</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">21</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">3</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">ޕަޔަރނިއަރ އެލިގަންޓް</p>
-      </td>
-    </tr>
-
-    <tr class="calibre8">
-      <td class="calibre9">
-        <p class="right1">224</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">444</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">9220</p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1"> </p>
-      </td>
-
-      <td class="calibre9">
-        <p class="right1">ޖުމްލަ</p>
-      </td>
-    </tr>
-  </table>
 
   <p class="right1"> </p>
 
