--- a/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/toc.xhtml
+++ b/Alhuganduge_Dhuvahu_Foiy.epub_FILES/OEBPS/Text/toc.xhtml
@@ -1,10 +1,5 @@
-<?xml version="1.0" encoding="utf-8" standalone="no"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-
-
-
-<html dir="rtl" xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
+<?xml version="1.0" encoding="UTF-8"?>
+<html xml:lang="dv" dir="rtl" xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head dir="rtl">
   <title>Alhuganduge Dhuvahu Foiy</title>
   <link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css" />
